--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,11 +181,20 @@ img {
 .side_menu.col_2 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     background-color: var(--sp-darker);
     height: calc(100vh - 88px);
     width: 230px;
 }
+
+.side_menu_wrapper {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow: auto;
+}
+
+
 
 .side_menu .logo {
     height: calc(100vh - 88px);
